--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
   "name": "@makersights/event-emitter-scoped",
-  "version": "1.1.7",
+  "version": "2.0.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "description": "Nest - modern, fast, powerful node.js web framework (@event-emitter)",
   "authors": [
     "Kamil Mysliwiec",
-    "Kirill Ivanov"
+    "Kirill Ivanov <kirill@makersights.com>",
+    "Hossein Shayesteh <hossein@makersights.com>",
+    "Kenta Kodashima <kenta@makersights.com>"
   ],
   "license": "MIT",
   "url": "https://github.com/MakerSights/event-emitter-scoped#readme",
-  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
     "format": "prettier --write \"{lib,test}/**/*.ts\"",
@@ -22,27 +28,30 @@
   "devDependencies": {
     "@commitlint/cli": "17.0.2",
     "@commitlint/config-angular": "17.0.0",
-    "@nestjs/common": "^9.4.3",
-    "@nestjs/core": "^9.4.3",
-    "@nestjs/platform-express": "^9.4.3",
-    "@nestjs/testing": "^9.4.3",
-    "@types/jest": "28.1.3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.36.0",
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/platform-express": "^11.1.6",
+    "@nestjs/testing": "^11.1.6",
+    "@types/jest": "30.0.0",
     "@types/node": "16.11.41",
-    "@typescript-eslint/eslint-plugin": "5.29.0",
-    "@typescript-eslint/parser": "5.29.0",
-    "eslint": "8.18.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
+    "@typescript-eslint/eslint-plugin": "8.45.0",
+    "@typescript-eslint/parser": "8.45.0",
+    "eslint": "9.36.0",
+    "eslint-config-prettier": "10.1.8",
+    "eslint-plugin-import": "2.32.0",
+    "globals": "^16.4.0",
     "husky": "8.0.1",
-    "jest": "28.1.1",
+    "jest": "30.2.0",
     "lint-staged": "13.0.2",
-    "prettier": "2.7.1",
+    "prettier": "3.6.2",
     "reflect-metadata": "0.1.13",
     "release-it": "15.1.0",
     "rimraf": "3.0.2",
     "rxjs": "7.5.5",
-    "ts-jest": "28.0.5",
-    "typescript": "4.7.4"
+    "ts-jest": "29.4.4",
+    "typescript": "5.9.3"
   },
   "peerDependencies": {
     "reflect-metadata": "^0.1.12"
